search misalignment fixed

--- a/resources/css/custom.data-table.css
+++ b/resources/css/custom.data-table.css
@@ -22,8 +22,6 @@ table > thead > tr  th{
     background-color: white;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important;
     padding: 12px;
-    padding-top: 0;
-    padding-bottom: 0;
 }
 
 
